# VulkanAddOns

./: .gitignore  .gitmodules  LICENSE  README.md
AddOns/3DObjects/: Cube3DColorTest.cpp  Cube3DColorTest.h  Cube3DColorTestVulkanModel.h  Cube3DShaded.h  Cube3DTextured.h
AddOns/3DObjects/Model/: ModelDefSpec.h  ModelLoader.cpp  ModelLoader.h  TestModel.h
Adjunct/3DObjects/: Cube3DColorTest.h  Cube3DColorTestVulkanModel.h  Cube3DTextured.h
Adjunct/3DObjects/Model/: TestModel.h
Model3D/: ModelLoader.cpp  ModelLoader.h  TestModel.h
ViewerProject/CMakeLinux/: CMakeLists.txt  README.md
ViewerProject/CMakeRasPi/: CMakeLists.txt  Makefile  README.md
ViewerProject/VisualStudio/: CPPaccompaniedHfileDirectories.props  VulkanViewer.sln  VulkanViewer.vcxproj  VulkanViewer.vcxproj.filters  newSetup1st.bat
ViewerProject/Xcode/: setup1st.sh
ViewerProject/Xcode/Resources/iOS/: Info.plist  LaunchScreen.storyboard
ViewerProject/Xcode/Resources/iOS/Images.xcassets/Splash.imageset/: Contents.json
ViewerProject/Xcode/Resources/macOS/: Info.plist
ViewerProject/Xcode/VulkanViewer.xcodeproj/: project.pbxproj
ViewerProject/Xcode/iOSFrameworksMaker/: README.md  setupOrUpdateSDLsrc.sh  thenMakeTheFrameworks.sh
ViewerProject/Xcode/iOSFrameworksMaker/iOSFrameworks/: XCFrameworkBuild.sh
ViewerProject/Xcode/iOSFrameworksMaker/iOSFrameworks/SDL-iOS/: SDL-iOS.h  module.modulemap
ViewerProject/Xcode/iOSFrameworksMaker/iOSFrameworks/SDL-iOS.xcodeproj/: project.pbxproj
ViewerProject/Xcode/iOSFrameworksMaker/iOSFrameworks/SDL_image-iOS/: SDL_image-iOS.h  module.modulemap
ViewerProject/Xcode/iOSFrameworksMaker/iOSFrameworks/SDL_image-iOS.xcodeproj/: project.pbxproj
ViewerProject/Xcode/src/: LocalFileSystem.h  PlatformSpecifics.h
ViewerProject/src/: AppConstants.h  AppMain.cpp  AppMain.h  VulkanModule  main.cpp
ViewerProject/src/stubs/: DepthBufferStubified.cpp  DepthBufferStubified.h
gxEngine/: gxCamera.cpp  gxCamera.h  gxGameClock.h  gxMatrix.cpp  gxMatrix.h
gxEngine/ControlSchemes/: gxControlCameraLocked.cpp  gxControlCameraLocked.h
gxEngine/iOS-specific/: gxCamera.cpp
shaders/: compile.bat  compileApple.sh  compileLinux.sh  intensity=color.frag  textuv+intens.frag  ubos+uvnorm=diffuv.vert  vboMesh.vert  xyz=color.frag
src/shaders/: ubos+uvnorm=diffuv.vert  vboMesh.frag
testAssets/: README.md
testObjects/: Cube3DColorTest.h  Cube3DColorTestVulkanModel.h  Cube3DShaded.h  Cube3DTextured.h
testObjects/stubs/: ModelLoaderStub.cpp
vkObj3dModelTester/src/shaders/: mvp+normal=diffuse.vert  mvp+uv+norm=diffuse.vert  mvp+xyz=xyz.vert  mvp2xyz.vert  mvpNormal2diffuse.vert  outWhite.frag  texture+intensity.frag  uv,mvp+norm=diffuv.vert  vboCube.frag  vertColor4out.frag  xyz2color.frag
